--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;500&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
     background-color: #171A1C;
     color: #F2F2F2;
     margin: 0 8% 0 8%;
+    font-family: Nunito, sans-serif;
+    font-weight: 300;
 }
 
