--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,5 +25,38 @@ h1, h2 {
 
 #logo {
     float: left;
+    height: 120px;
+    width: 180px;
 }
 
+/* navigation links */
+
+#menu {
+    font-size: 120%;
+
+}
+
+#menu, #logo {
+    line-height: 120px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-left: 80px;
+    text-transform: uppercase;
+}
+
+#menu a {
+    color: #FBC600;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+#menu a:hover {
+    border-bottom: 3px solid #FBC600;
+}
+
+.active {
+    border-bottom: 3px solid #ff0000;
+}
