--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     margin: 0 8% 0 8%;
     font-family: Nunito, sans-serif;
     font-weight: 300;
+    
 }
 
 /* headings */
@@ -193,4 +194,14 @@ footer div {
     padding: 0 0 2% 0;
 }
 
+/* Band page */
 
+#band-members {
+    clear: both;
+}
+
+#band {
+    margin-top: 96px;
+    padding: 80px 0 0;
+    font-size: 180%;
+}
