--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,3 +205,52 @@ footer div {
     padding: 80px 0 0;
     font-size: 180%;
 }
+
+.member-photos {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.member-photos img {
+    border-radius: 8px;
+}
+
+/* Image overlay */
+
+.image {
+    position: relative;
+}
+
+
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: black;
+}
+
+.image:hover .overlay {
+    opacity: 1;
+}
+
+.overlay-text {
+    color: #FBC600;
+    font-size: 150%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    opacity: 1;
+    text-transform: uppercase;
+
+}
