--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,7 @@ footer div {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: black;
+    background-image: url(/assets/images/overlay.png);
 }
 
 .image:hover .overlay {
@@ -242,8 +242,8 @@ footer div {
 }
 
 .overlay-text {
-    color: #FBC600;
-    font-size: 150%;
+    color: #f2f2f2;
+    font-size: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -251,6 +251,8 @@ footer div {
     -ms-transform: translate(-50%, -50%);
     text-align: center;
     opacity: 1;
-    text-transform: uppercase;
+}
 
+.overlay-text p {
+    font-size: 110%;
 }
