--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,13 @@ body {
     margin: 0 8% 0 8%;
     font-family: Nunito, sans-serif;
     font-weight: 300;
-    
+
 }
 
 /* headings */
 
-h1, h2 {
+h1,
+h2 {
     font-family: Nunito, sans-serif;
     font-weight: 500;
     color: #FBC600;
@@ -37,7 +38,8 @@ h1, h2 {
 
 }
 
-#menu, #logo {
+#menu,
+#logo {
     line-height: 120px;
 }
 
@@ -109,7 +111,7 @@ h1, h2 {
     transition: left 0s 0.75s;
 }
 
-[id^="slide"]:checked + .slide {
+[id^="slide"]:checked+.slide {
     left: 0;
     z-index: 100;
     transition: left 0.65s ease-out;
@@ -135,7 +137,7 @@ h1, h2 {
 }
 
 table {
-    width:  100%;
+    width: 100%;
 }
 
 td {
@@ -204,6 +206,7 @@ footer div {
     margin-top: 96px;
     padding: 80px 0 0;
     font-size: 180%;
+    margin-bottom: 32px;
 }
 
 .member-photos {
@@ -243,12 +246,11 @@ footer div {
 
 .overlay-text {
     color: #f2f2f2;
-    font-size: 100%;
+    font-size: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     text-align: center;
     opacity: 1;
 }
