--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,3 +258,26 @@ footer div {
 .overlay-text p {
     font-size: 110%;
 }
+
+/* Discography page */
+
+#discography {
+    clear: both;
+}
+
+#discography h1 {
+    margin-top: 96px;
+    padding: 80px 0 0;
+    font-size: 180%;
+    margin-bottom: 32px;
+}
+
+.albums {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.albums img {
+    border-radius: 8px;
+}
