--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,11 @@ h2 {
 .slider-menu label {
     cursor: pointer;
     display: inline-block;
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     background: #FBC600;
     border-radius: 50px;
+    border: 4px solid #171A1C;
     margin: 0 0.2em 1em;
 }
 
@@ -105,8 +106,9 @@ h2 {
     top: 0;
     left: 100%;
     z-index: 10;
-    padding: 8em 1em 0;
+    padding: 0;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: 50% 50%;
     transition: left 0s 0.75s;
 }
@@ -118,15 +120,18 @@ h2 {
 }
 
 .slide-1 {
-    background-image: url("/assets/images/01.png");
+    background-image: url("/assets/images/hero1.png");
+    border-radius: 8px;
 }
 
 .slide-2 {
-    background-image: url("/assets/images/02.png");
+    background-image: url("/assets/images/hero2.png");
+    border-radius: 8px;
 }
 
 .slide-3 {
-    background-image: url("/assets/images/03.png");
+    background-image: url("/assets/images/hero3.png");
+    border-radius: 8px;
 }
 
 /* tour dates */
@@ -181,7 +186,7 @@ footer ul {
 }
 
 footer ul li {
-    display: inline;
+    display: inline-block;
 }
 
 footer i {
