--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,3 +360,29 @@ i {
     width: 300px;
     margin: 12px 12px 12px 0;
 }
+
+
+
+.image-right {
+    float: right;
+    margin-left: 32px;
+    margin-bottom: 32px;
+    border-radius: 8px;
+}
+
+.image-left {
+    float: left;
+    margin-right: 32px;
+    margin-bottom: 32px;
+    border-radius: 8px;
+}
+
+.band-history {
+    margin-top: 48px;
+    margin-bottom: 24px;
+    
+}
+
+#millenium {
+    padding-top: 32px;
+}
