--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,6 +423,33 @@ i {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 16px;
 }
+.contact-container h3 {
+    font-family: Nunito, sans-serif;
+    font-weight: 500;
+    color: #FBC600;
+    text-transform: uppercase;
+    margin-top: 36px;
+    margin-bottom: 16px;
+}
+ .contact-container a {
+    color: #f2f2f2;
+    text-decoration: none;
+ }
+
+  .contact-container a:hover {
+      color: #Fbc600;
+      text-decoration: none;
+  }
+    
+ 
+.row2 {
+    grid-row: 2;
+}
+#contact-form {
+    grid-column: 3 / span 2;
+    grid-row: span 3;
+}
+    
 
 
 
