--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,11 +445,58 @@ i {
 .row2 {
     grid-row: 2;
 }
+
+/* Contact form */
+
 #contact-form {
     grid-column: 3 / span 2;
     grid-row: span 3;
 }
+
+#contact-form input {
+    width: 100%;
+    padding: 12px 16px;
+    margin: 0 0 24px 0;
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: 3px solid #Fbc600;
+    background-color: #171A1C;
+    color: #F2F2F2;
+    font-family: Nunito, sans-serif;
+    font-weight: 300;
+
+}
+
+#contact-form input:focus {
+    border: 3px solid #ff0000;
+}
+
+#contact-form input[type=button] {
+    width: 30%;
+    border: none;
+    background-color: #Fbc600;
+    color: #171A1C;
+    font-family: Nunito, sans-serif;
+    font-weight: 500;
+    font-size: 120%;
+    float: right;
+
     
+}
+
+#contact-form textarea {
+    width: 100%;
+    height: 240px;
+    padding: 12px 16px;
+    margin: 0 0 24px 0;
+    box-sizing: border-box;
+    border-radius: 8px;
+    border: 3px solid #Fbc600;
+    background-color: #171A1C;
+    color: #F2F2F2;
+    font-family: Nunito, sans-serif;
+    font-weight: 300;
+}
 
 
 
