--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ h2 {
 
 #hamburger-menu {
     position: fixed;
-    top: 20px;
+    top: 40px;
     right: 20px;
     width: 48px;
     height: 48px;
@@ -141,15 +141,16 @@ h2 {
     display: none;
     border: none;
     padding: 0;
-    margin: 0;
     color: #FCB600;
     cursor: pointer;
+    
+    
 }
 
 #hamburger-menu li{
     list-style-type: none;
     line-height: 2rem;
-    
+    text-align: left;
 
 }
 
@@ -165,16 +166,30 @@ h2 {
 
 #sidebar-menu {
     visibility: hidden;
+    width: 180px;
+    height: auto;
+    color: #FBC600;
+    margin-right: 50px;
+    
 }
 
-#hamburger-input:checked ~ #sidebar-menu {
-    visibility: visible;
-    right: 0;
+#sidebar-menu a {
+    color: #FBC600;
+    font-weight: 500;
+    text-decoration: none;
 }
+
+#hamburger-input:checked + #hamburger-menu #sidebar-menu {
+    visibility: visible;
+    
+    
+}
+
+
 
 #hamburger-input:checked ~ .menu-overlay {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 0.85;
 }
 
 @media screen and (max-width: 750px) {
