--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -33,6 +34,134 @@ h2 {
 
 /* navigation links */
 
+.nav-bar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    position: relative;
+    background-color: var(--color2);
+    
+    
+}
+
+.logo img {
+    width: 180px;
+}
+
+.menu {
+    display: flex;
+}
+
+.menu li {
+    padding-left: 30px;
+}
+
+.menu li a {
+    display: inline-block;
+    text-decoration: none;
+    color: #FCB600;
+    font-family: Nunito, sans-serif;
+    font-weight: 500;
+    font-size: 150%;
+    text-align: center;
+    transition: 0.15s ease-in-out;
+    position: relative;
+    text-transform: uppercase;
+}
+
+.menu a:hover {
+    border-bottom: 3px solid #FBC600;
+}
+
+.active {
+    border-bottom: 3px solid #ff0000;
+}
+
+.menu li a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: var(--color1);
+    transition: 0.15s ease-in-out;
+}
+
+.menu li a:hover:after {
+    width: 100%;
+}
+
+.open-menu,
+.close-menu {
+    position: absolute;
+    
+    color: #FCB600;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: none;
+}
+
+.open-menu {
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+#hamburger-icon {
+    text-align: right;
+}
+
+#close-icon {
+    text-align: right;
+    top: 50px;
+    right: 8%;
+}
+
+.close-menu {
+    top: 20px;
+    right: 20px;
+}
+
+#check {
+    display: none;
+}
+
+@media(max-width: 750px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 10000;
+        background-color: #171A1C;
+        transition: all 0.2s ease-in-out;
+    }
+
+    .menu li {
+        margin-top: 24px;
+    }
+
+    .menu li a {
+        padding: 10px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
+}
+/*
 #menu {
     font-size: 120%;
 
@@ -101,9 +230,39 @@ h2 {
     display: flex;
 
    }
-} */
+} 
 
-/* Hamburger menu */
+/* Hamburger menu 
+
+.sidebar-container {
+    position: relative;
+}
+
+.hamburger-icon {
+    color:#FCB600;
+    min-width: 32px;
+    min-height: 32px;
+    transition: opacity 80ms linear;
+    display: none;
+    opacity: 0;
+}
+
+.close-icon {
+    color:#FBC600;
+    position: absolute;
+    top: 0;
+    min-width: 32px;
+    min-height: 32px;
+    display: none;
+    opacity: 0;
+    z-index: -1;
+}
+
+@media screen and (max-width: 750px) {
+    .hamburger-icon {
+        opacity: 1;
+    }
+}
 
 .menu-overlay {
     position: fixed;
