--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,10 @@ h2 {
         transition: all 0.2s ease-in-out;
     }
 
+    .logo img {
+            scale: 80%;
+        }
+
     .menu li {
         margin-top: 24px;
     }
@@ -161,6 +165,7 @@ h2 {
     overflow: hidden;
     text-align: center;
     border-radius: 8px;
+    margin-top: 2%;
 }
 
 .hero-slider img {
@@ -184,8 +189,8 @@ h2 {
 .slider-menu label {
     cursor: pointer;
     display: inline-block;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     background: #FBC600;
     border-radius: 50px;
     border: 4px solid #171A1C;
@@ -236,7 +241,7 @@ h2 {
 /* tour dates */
 
 #tourdates {
-    margin-top: 72px;
+    margin-top: 2%;
     font-size: 180%;
 }
 
@@ -272,6 +277,10 @@ td {
 }
 
 @media screen and (max-width: 800px) {
+    #tourdates {
+        font-size: 150%;
+    }
+    
     table tr {
         display: block;
         border-bottom: 3px solid #ff0000;
@@ -343,10 +352,9 @@ td {
 }
 
 #band {
-    margin-top: 96px;
-    padding: 80px 0 0;
+    margin-top: 12px;
     font-size: 180%;
-    margin-bottom: 32px;
+    margin-bottom: 12px;
 }
 
 .member-photos {
@@ -404,8 +412,7 @@ td {
 }
 
 #discography h1 {
-    margin-top: 96px;
-    padding: 80px 0 0;
+    margin-top: 36px;
     font-size: 180%;
     margin-bottom: 32px;
 }
@@ -429,7 +436,7 @@ i {
 /* Band Page */
 
 #band-history {
-    margin-top: 48px;
+    margin-top: 24px;
     box-sizing: border-box;
 }
 
