--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,7 @@ h2 {
     display: flex;
 }
 
-.menu li {
-    padding-left: 30px;
-}
-
-.menu li a {
+.menu a {
     display: inline-block;
     text-decoration: none;
     color: #FCB600;
@@ -60,6 +56,7 @@ h2 {
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
+    margin-left: 40px;
 }
 
 .menu a:hover {
