Change favicon file path

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,7 +377,7 @@ td {
     width: 100%;
     opacity: 0;
     transition: 0.5s ease;
-    background-image: url(..images/overlay.png);
+    background-image: url(../images/overlay.png);
 }
 
 .image:hover .overlay {
